[package]
name = "stellarsort_core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "*"
imageproc = "*"
rayon = "*"         # Optional: F端r parallele Verarbeitung
thiserror = "*"     # Optional: F端r benutzerdefinierte Fehler
log = "*"           # Optional: F端r Logging
env_logger = "*"   # Optional: F端r Logging-Implementierung
indicatif = "*"